[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.65
margin_right = 168.0
margin_bottom = 720.0
custom_constants/separation = 150
__meta__ = {
"_edit_group_": true
}

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 480.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 537.0
margin_right = 480.0
margin_bottom = 647.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 192.0
margin_right = 287.0
margin_bottom = 45.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="HighScoresButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 133.0
margin_top = 65.0
margin_right = 346.0
margin_bottom = 110.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 6 )
text = "High Scores"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
